[gd_scene load_steps=28 format=3 uid="uid://dll4ncwxgjqut"]

[ext_resource type="Script" path="res://Scripts/emeny_1.gd" id="1_a7oxe"]
[ext_resource type="Texture2D" uid="uid://c1kyeoqybquq3" path="res://Assets/smile_individual sprite/slime-attack-0.png" id="1_mj1wo"]
[ext_resource type="Texture2D" uid="uid://bhrfshb03wysw" path="res://Assets/smile_individual sprite/slime-idle-0.png" id="1_qbrnb"]
[ext_resource type="Texture2D" uid="uid://bom0xwadeh1ba" path="res://Assets/smile_individual sprite/slime-idle-1.png" id="2_0ikvj"]
[ext_resource type="Texture2D" uid="uid://wlk1rudyd0tr" path="res://Assets/smile_individual sprite/slime-idle-3.png" id="3_t3yvx"]
[ext_resource type="Texture2D" uid="uid://14pbedmo7htr" path="res://Assets/smile_individual sprite/slime-idle-2.png" id="4_17r5y"]
[ext_resource type="Texture2D" uid="uid://vg3dpcb1v2et" path="res://Assets/smile_individual sprite/slime-hurt-0.png" id="5_u6mpu"]
[ext_resource type="Texture2D" uid="uid://bnoo5in4cr2q7" path="res://Assets/smile_individual sprite/slime-hurt-1.png" id="6_xp8ma"]
[ext_resource type="Texture2D" uid="uid://c3pdsqgil6shg" path="res://Assets/smile_individual sprite/slime-hurt-2.png" id="7_wkcyk"]
[ext_resource type="Texture2D" uid="uid://dxget0nybw0gk" path="res://Assets/smile_individual sprite/slime-hurt-3.png" id="8_alvjq"]
[ext_resource type="Texture2D" uid="uid://c6g3cxdhblukw" path="res://Assets/smile_individual sprite/slime-die-0.png" id="9_1xuaf"]
[ext_resource type="Texture2D" uid="uid://dqoakjt04733" path="res://Assets/smile_individual sprite/slime-die-1.png" id="10_0c646"]
[ext_resource type="Texture2D" uid="uid://cxm0on5xkva25" path="res://Assets/smile_individual sprite/slime-die-2.png" id="11_dwcqc"]
[ext_resource type="Texture2D" uid="uid://b1ycpr2otskl6" path="res://Assets/smile_individual sprite/slime-die-3.png" id="12_487n1"]
[ext_resource type="Texture2D" uid="uid://dga1g7tiftcbk" path="res://Assets/smile_individual sprite/slime-move-0.png" id="15_tj5wn"]
[ext_resource type="Texture2D" uid="uid://cqgfyv3vyl4qd" path="res://Assets/smile_individual sprite/slime-move-1.png" id="16_4hvu2"]
[ext_resource type="Texture2D" uid="uid://ciqwtmfkm24da" path="res://Assets/smile_individual sprite/slime-move-3.png" id="17_vp2gp"]
[ext_resource type="Texture2D" uid="uid://dxxu4135ud654" path="res://Assets/smile_individual sprite/slime-move-2.png" id="18_cv3u1"]
[ext_resource type="PackedScene" uid="uid://c701g3pw033e4" path="res://Sceans/health_bar.tscn" id="19_o5e43"]

[sub_resource type="Animation" id="Animation_1bywk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_mj1wo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lw21v"]
resource_name = "slime_die"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_1xuaf"), ExtResource("10_0c646"), ExtResource("11_dwcqc"), ExtResource("12_487n1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_wheuw"]
resource_name = "slime_hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_u6mpu"), ExtResource("6_xp8ma"), ExtResource("7_wkcyk"), ExtResource("8_alvjq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_i1hmj"]
resource_name = "slime_idle"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_qbrnb"), ExtResource("2_0ikvj"), ExtResource("3_t3yvx"), ExtResource("4_17r5y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_3o4lu"]
resource_name = "slime_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("15_tj5wn"), ExtResource("16_4hvu2"), ExtResource("17_vp2gp"), ExtResource("18_cv3u1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkg3w"]
_data = {
"RESET": SubResource("Animation_1bywk"),
"slime_die": SubResource("Animation_lw21v"),
"slime_hurt": SubResource("Animation_wheuw"),
"slime_idle": SubResource("Animation_i1hmj"),
"slime_walk": SubResource("Animation_3o4lu")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j1wi1"]
radius = 3.99741
height = 17.9883

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4ywb"]
size = Vector2(23, 10)

[node name="emeny_1" type="CharacterBody2D" groups=["can_do_damage", "can_take_damage", "enemies"]]
script = ExtResource("1_a7oxe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mj1wo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tkg3w")
}
autoplay = "slime_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 6)
rotation = 1.60681
shape = SubResource("CapsuleShape2D_j1wi1")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1.5, 5)
shape = SubResource("RectangleShape2D_b4ywb")

[node name="HealthBar" parent="." instance=ExtResource("19_o5e43")]
offset_left = -11.0
offset_top = -4.0
offset_right = 19.0
offset_bottom = 4.0
scale = Vector2(0.783476, 0.292208)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
